--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jest-localstorage-mock": "^2.4.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.3.1",
